--- a/frontend/less/content-editing.less
+++ b/frontend/less/content-editing.less
@@ -1,13 +1,13 @@
-$editable-container-border-width: 1px;
-$editable-container-border: $editable-container-border-width solid #cecece;
+@editable-container-border-width: 1px;
+@editable-container-border: @editable-container-border-width solid #cecece;
 
-$editable-content-header-height: 50px;
+@editable-content-header-height: 50px;
 
 .content-editor {
   position: fixed;
   padding: 0 10px;
-  height: $editable-content-header-height;
-  line-height: $editable-content-header-height;
+  height: @editable-content-header-height;
+  line-height: @editable-content-header-height;
   width: 100%;
   z-index: 10000;
   top: 0;
@@ -15,7 +15,7 @@ $editable-content-header-height: 50px;
 
 .content-editable {
   header {
-    margin-top: $editable-content-header-height;
+    margin-top: @editable-content-header-height;
   }
   .cke_button_label.cke_button__inlinesave_label {
     display: inline;
@@ -24,7 +24,7 @@ $editable-content-header-height: 50px;
   .content-editable-container {
     position: relative;
     outline: 0;
-    border: $editable-container-border;
+    border: @editable-container-border;
     [data-editable=true] {
       position: relative;
       //border-bottom: 0;
@@ -34,12 +34,12 @@ $editable-content-header-height: 50px;
       position: absolute;
       text-align: center;
       top: 100%;
-      margin-left: -$editable-container-border-width;
-      margin-right: -$editable-container-border-width;
-      width: calc(%(~"100% + %a", 2*$editable-container-border-width));
+      margin-left: -@editable-container-border-width;
+      margin-right: -@editable-container-border-width;
+      width: calc(%(~"100% + %a", 2*@editable-container-border-width));
       background: white;
       z-index: 99991;
-      border: $editable-container-border;
+      border: @editable-container-border;
       border-top: none;
       button {
         margin: 0 5px;
